--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "1.7.17",
     "@next-auth/prisma-adapter": "1.0.7",
     "@prisma/client": "5.4.2",
     "@tailwindcss/forms": "^0.5.6",
     "axios": "1.5.1",
     "bcrypt": "5.1.1",
     "clsx": "2.0.0",
+    "date-fns": "2.30.0",
     "next": "13.5.4",
     "next-auth": "4.23.2",
+    "next-cloudinary": "4.24.0",
+    "next-superjson-plugin": "0.5.9",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "7.47.0",
